add flume sdk demo